plugins {
    id 'com.adarshr.test-logger' version '1.7.0'
    id "org.javamodularity.moduleplugin" version "1.5.0"
}


subprojects {
    apply plugin: 'java'
    apply plugin: 'org.javamodularity.moduleplugin'
    apply plugin: 'com.adarshr.test-logger'

    sourceCompatibility = 11
    targetCompatibility = 11

    repositories {
        jcenter()
        mavenCentral()
        maven {
            url 'http://dl.bintray.com/hohonuuli/maven'
        }
        maven {
            url 'http://dl.bintray.com/jerady/maven'
        }
    }

    test {
        useJUnitPlatform()
        testlogger {
            theme 'mocha' // task level
        }
    }

    dependencies {

        constraints {
            implementation 'com.squareup.okhttp3:logging-interceptor:3.14.2'
            implementation 'com.auth0:java-jwt:3.8.1'
            implementation 'com.fatboyindustrial.gson-javatime-serialisers:gson-javatime-serialisers:1.1.1'
            implementation 'com.github.ben-manes.caffeine:caffeine:2.7.0'
            implementation 'com.google.code.gson:gson:2.8.5'
            implementation 'com.google.inject:guice:4.2.2'
            implementation 'com.google.guava:guava:28.0-jre'
            implementation 'com.jfoenix:jfoenix:9.0.9'
            implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
            implementation 'com.squareup.retrofit2:retrofit:2.6.0'
            implementation 'com.sun.activation:javax.activation:1.2.0'
            implementation 'com.typesafe:config:1.3.4'
            implementation 'de.jensd:fontawesomefx-commons:11.0'
            implementation 'de.jensd:fontawesomefx-materialicons:2.2.0-11'
            implementation 'eu.hansolo:Medusa:11.1'
            implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
            implementation 'io.reactivex.rxjava2:rxjavafx:2.11.0-RC16'
            implementation 'javax.inject:javax.inject:1'
            implementation 'javax.servlet:javax.servlet-api:4.0.1'
            implementation 'org.controlsfx:controlsfx:11.0.0'
            implementation 'org.glassfish.jersey.core:jersey-client:2.29'
            implementation 'org.mbari.m3:vars-blackmagic:0.0.2'
            implementation 'org.mbari.vars:vars-avfoundation:2.2.2'
            implementation 'org.mbari.vcr4j:vcr4j-core:4.0.2'
            implementation 'org.mbari.vcr4j:vcr4j-jserialcomm:4.0.2'
            implementation 'org.mbari.vcr4j:vcr4j-rs422:4.0.2'
            implementation 'org.mbari.vcr4j:vcr4j-sharktopoda:4.0.2'
            implementation 'org.mbari.vcr4j:vcr4j-ui:4.0.2'
            implementation 'org.mbari:mbarix4j:1.10.0'
            implementation 'org.scijava:native-lib-loader:2.3.4'
            implementation 'org.slf4j:slf4j-api:1.7.26'
            runtimeOnly 'ch.qos.logback:logback-classic:1.2.3'
        }

        testCompileOnly 'junit:junit:4.12'
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.3.1'
    }

    task tree(type: DependencyReportTask) {}

}

